--- a/contact.html
+++ b/contact.html
@@ -10,35 +10,37 @@
             <td>Oswald Okezie</td>
         </tr>
         <tr>
+            <td>Email:</td>
+            <td>oswald.okezie@gmail.com</td>
+        </tr>
+        <tr>
             <td>Tel No:</td>
             <td>08149113474</td>
         </tr>
         <tr>
-            <td>Twitter Handle:</td>
-            <td>N/A</td>
+            <td>Whatsapp:</td>
+            <td>08149113474</td>
         </tr>
         <tr>
-            <td>Facebook Handle:</td>
-            <td>N/A</td>
+            <td>Telegram:</td>
+            <td>08149113474</td>
         </tr>
     </table>
     <h2>Send me a message</h2>
         <form>
-            <label for="">Your Name</label>
-            <Input type="text" placeholder="Enter your full name">
+            <label for="name">Your Name</label>
+            <Input type="text" id="name" placeholder="Enter your full name" required>
                 <br/>
-            <label for="">Your Email</label>
-            <Input type="text" placeholder="Enter your email">
+            <label for="email">Your Email</label>
+            <Input type="text" id="email" placeholder="Enter your email" required>
                 <br/>
-            say</label>
+            </label>
             <br/>
-            <br/>
-            <label for="">Your Message</label>
+            </br>
             <textarea cols="20" rows="10"></textarea>
-            <br/>
-            <button>Submit</button>
-
-        </form>
-
+        </br>
+        <button>Send</button>
+            </form>
+            <a href="index.html">Back to home</a>
 </body>
 </html>
