--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
                 </td>
             </tr>
         </table>
-        <a href="https://www.google.com">About</a>
+        <a href="about.html">About</a>
+    </br>
+            <a href="contact.html">Contact us</a>
         <hr>
-        <h3>Books And Trainings</h3>
+        <h3>Books And Trainings:</h3>
         <ul>
             <li>Web Design and development @ Loctech</li>
-            <li>How to cook</li>
-            <li>Gaming</li>
+            <li>Python and Django</li>
+            <li>Graphics Design</li>
+            <li>Front end and Back end Development</li>
         </ul>
             <hr>
             <h3> Savings History</h3>
@@ -60,11 +63,7 @@
                 <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
             </tr>
             </table>
-            <hr>
-            <a href="contact.html">Contact us</a>
-
-
-    </body>
+</body>
     </html>
         
 
