--- a/contact.html
+++ b/contact.html
@@ -42,5 +42,7 @@
         <button>Send</button>
             </form>
             <a href="index.html">Back to home</a>
+        </br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57149.9173659353!2d6.992094964528812!3d4.830628807024347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1069cd0b7340bc3b%3A0x1ed0fd27efeed9ba!2sEvalyn%20Suites%20%26%20Lounge!5e1!3m2!1sen!2sng!4v1670351002551!5m2!1sen!2sng" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
