--- a/index.html
+++ b/index.html
@@ -25,44 +25,37 @@
             <li>Front end and Back end Development</li>
         </ul>
             <hr>
-            <h3> Savings History</h3>
-            <table>
-                <thead>
-                <tr>
-                <th>Month</th>
-                <th>Savings</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>January</td>
-                    <td>$100</td>
-                </tr>
-                <tr>
-                    <td>Febuary</td>
-                    <td>$80</td>
-                </tr>
-            </tbody>
-            </table>
             <h3>Skill</h3>
             <table cellspacing="10">
                 <tr>
-                <td>Gaming</td>
+                <td>Drawing:</td>
+                <td>&#11088;&#11088;&#11088;&#11088;</td>
+            </tr>
+            <tr>
+                <td>Web Design:</td>
                 <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
             </tr>
             <tr>
-                <td>Drawing</td>
-                <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
+                <td>Graphics and Content creation:</td>
+                <td>&#11088;&#11088;&#11088;</td>
             </tr>
             <tr>
-                <td>Tech</td>
-                <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
-            </tr>
-            <tr>
-                <td>Design</td>
-                <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
+                <td>Digital Marketing:</td>
+                <td>&#11088;&#11088;&#11088;&#11088;</td>
             </tr>
             </table>
+        </br>
+            <h3>Hobbies</h3>
+    </br>
+    <li>Drawing</li>
+    <li>Painting</li>
+    <li>Reading</li>
+    <li>Research</li>
+    <li>Playing Games</li>
+    <li>Listening to musics</li>
+    <li>Watching movies</li>
+    <li>Fitness and Workout</li>
+            
 </body>
     </html>
         
